# fact-bot

./: README.md  botStartup.py  config.py  keep_alive.py  main.py  pyproject.toml
cogs/: fact.py  general.py
templates/: index.html
