[tool.poetry]
name = "repl_python3_fact-bot"
version = "0.1.0"
description = ""
authors = ["Ravost <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
aiofiles = "^0.8.0"
aiohttp = "^3.8.1"
Flask = "^2.0.2"
disnake = "^2.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
